#Project: CORS update